--- a/appointa/index.html
+++ b/appointa/index.html
@@ -601,15 +601,21 @@
 
 
           <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220; <strong class="textDecor APPOINTA">Finding a time that works
-                      for both</strong> the potential candidate and the recruiter/hiring
-                    manager is a challenge sometimes. This can be difficult to
-                    coordinate, especially if the potential candidate is located in a
-                    different time zone.&#8221;
-                  </h4>
+            <div class="Grid-cell ">
+              <div class="element ">
+                <div class="element cardAPPOINTA">
+
+                  <div class="element BGappointaQuote">
+                    <div class="element">
+                      <h4 class="">&#8220; <strong class="textDecor APPOINTA">Finding a time that
+                          works
+                          for both</strong> the potential candidate and the recruiter/hiring
+                        manager is a challenge sometimes. This can be difficult to
+                        coordinate, especially if the potential candidate is located in a
+                        different time zone.&#8221;
+                      </h4>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -619,14 +625,16 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                 <h4>&#8220;
-                    <strong class="textDecor APPOINTA">Finding a time that works
-                      for both</strong> the potential candidate and the recruiter/hiring
-                    manager is a challenge sometimes. This can be difficult to
-                    coordinate, especially if the potential candidate is located in a
-                    different time zone.&#8221;
-                  </h4>
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;
+                      <strong class="textDecor APPOINTA">Finding a time that works
+                        for both</strong> the potential candidate and the recruiter/hiring
+                      manager is a challenge sometimes. This can be difficult to
+                      coordinate, especially if the potential candidate is located in a
+                      different time zone.&#8221;
+                    </h4>
+                  </div>
                 </div>
               </div>
             </div>
@@ -635,82 +643,74 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4 class=""> &#8220;I need to schedule <strong class="textDecor APPOINTA">as many
-                    interviews as possible</strong> in the allotted time. The
-                  goal is to schedule the interviews in such a way that no interviewer is
-                  overworked and all of the interviews are conducted in a timely
-                  manner.&#8221;
-                </h4>
-                </div>
-              </div>
-            </div>
-          </div>
- 
-          <div class="blankHXS"></div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
-                    This
-                    means that the <strong class="textDecor APPOINTA">candidate should have
-                      all of the
-                      necessary documents and materials
-                      ready</strong>. The recruiter should also give the candidate a list of
-                    questions to
-                    prepare for in advance.&#8221;
-                  </h4>
-                </div>
-              </div>
-            </div>
-          </div>
- 
-
-          <div class="blankHXS"></div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;If the <strong class="textDecor APPOINTA">candidates are not
-                    responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
-                    manager's schedule is
-                    full</strong>, I have to spend more time and effort working on the
-                  interview
-                  schedule.&#8221;
-                </h4>
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4 class=""> &#8220;I need to schedule <strong class="textDecor APPOINTA">as
+                        many
+                        interviews as possible</strong> in the allotted time. The
+                      goal is to schedule the interviews in such a way that no interviewer is
+                      overworked and all of the interviews are conducted in a timely
+                      manner.&#8221;
+                    </h4>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
 
           <div class="blankHXS"></div>
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;I may also coordinate with hiring managers and other employees to
-                    <strong class="textDecor APPOINTA">ensure that
-                      the interview process runs smoothly</strong>.&#8221;
-                  </h4>
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
+                      This
+                      means that the <strong class="textDecor APPOINTA">candidate should have
+                        all of the
+                        necessary documents and materials
+                        ready</strong>. The recruiter should also give the candidate a list of
+                      questions to
+                      prepare for in advance.&#8221;
+                    </h4>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
+
+
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element ">
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;If the <strong class="textDecor APPOINTA">candidates are not
+                        responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
+                        manager's schedule is
+                        full</strong>, I have to spend more time and effort working on the
+                      interview
+                      schedule.&#8221;
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="blankHXS"></div>
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;I feel that it is best to schedule interviews in advance so that
-                    both
-                    parties
-                    have time to prepare. This also allows the us to <strong
-                      class="textDecor APPOINTA">gauge the interest of the
-                      candidate</strong> and ensure that they are still interested in the
-                    position.&#8221;</h4>
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;I coordinate with hiring managers and other employees to <strong
+                      class="textDecor APPOINTA">ensure that the interview process runs smoothly</strong>. I also follow up with candidates after an interview to <strong
+                      class="textDecor APPOINTA">provide feedback</strong>.&#8221;
+                    </h4>
+                  </div>
                 </div>
               </div>
             </div>
@@ -720,31 +720,56 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;I use the scheduling tools like Google Calendar or Calendly to
-                    help me to automate part of the scheduling process.&#8221;</h4>
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;I feel that it is best to schedule interviews in advance so that
+                      both parties have time to prepare. This also allows the us to <strong
+                        class="textDecor APPOINTA">gauge the interest of the
+                        candidate</strong> and ensure that they are still interested in the
+                      position.&#8221;</h4>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
- 
           <div class="blankHXS"></div>
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
-                <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h4>&#8220;I may feel pressure to <strong class="textDecor APPOINTA">ensure that
-                    the interviews are conducted in a timely and efficient manner</strong>, in
-                  order to avoid any delays in the
-                  hiring process.&#8221;</h4>
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;I use the scheduling tools like Google Calendar or Calendly to
+                      help me to automate part of the scheduling process. Google Calendar is a great
+                      tool for <strong
+                      class="textDecor APPOINTA">keeping track of events and setting reminders</strong>. Calendly is a great
+                      tool for <strong
+                      class="textDecor APPOINTA">setting up appointments</strong> and managing your schedule.&#8221;</h4>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
- 
 
- 
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element ">
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;I may feel pressure to <strong class="textDecor APPOINTA">ensure that
+                        the interviews are conducted in a timely and efficient manner</strong>, in
+                      order to avoid any delays in the
+                      hiring process.&#8221;</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
 
         </div>
 
@@ -839,6 +864,62 @@
             </div>
           </div>
         </div>
+
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                <h4 class="">
+                  <p>Recruiters main touchpoints</p>
+                  <img class="" src="Diagram_1.svg" alt="Diagram">
+
+
+                </h4>
+              </div>
+              <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                <h4 class="">
+
+                  <p>The reason why scheduling is time consuming:</p>
+                  <ul>
+                    <li>Reach out and get availability from the candidate </li>
+                    <li>Find an eligible interviewer from an interview pool, check availability
+                    </li>
+                    <li>
+                      Match availability between qualified candidate and eligible interviewer
+                    </li>
+                    <li>
+                      Easy to make mistakes, companies have to hire recruiter coordinators to make
+                      sure candidates won't have a bad experience
+                    </li>
+                    <li>When booking an onsite interview, it is a huge
+                      challenge to find a group of people available at the same time
+
+                    </li>
+                  </ul>
+                  <img class="" src="Diagram_2.svg" alt="Diagram">
+                </h4>
+              </div>
+
+              <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+                <h4 class="">
+                  <p>The recruitment app and scheduling app currently they are using are not very
+                    efficient for scheduling job interviews</p>
+                  <p> The existing tools such as Greenhouse and Calendly
+                    schedule for <strong class="textDecor APPOINTA">a specific
+                      interviewer</strong>.
+                    Most time, finding an interviewer from an interview pool is unnecessary
+                    because it
+                    is a uniform predetermined interview. </p>
+                </h4>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+
+
+
       </section>
       <div class="blankHS"></div>
     </section>
@@ -1120,7 +1201,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> User flows</p>
+                  <p class="tArrow"> Key flows</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -1128,25 +1209,29 @@
           </div>
         </div>
         <!-- Arrow -->
-        <div class="blankHS"></div>
         <!-- user flow -->
         <div class="wrapper">
           <div class="Grid Grid--full u-textCenter">
             <div class="Grid-cell">
               <div class="element">
 
-                <img class="modal-target" src="userflow_Recruiter.svg" alt="user flow">
+                <img class="modal-target" src="diagram_keyFlows.svg" alt="user flow">
               </div>
             </div>
 
           </div>
         </div>
+
+        <div class="blankHS"></div>
+
+        <!-- Arrow -->
+
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <div class="element colorAPPOINTABg leftVerLine APPOINTA">
+              <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
                 <h4 class="">
-                  <p><strong>The recruiter user flow</strong>
+                  <p><strong>Key user flows</strong>
                   </p>
                   <p>Hiring managers and recruiters define the <strong
                       class="textDecor APPOINTA">interview type</strong> in this app. the
@@ -1189,7 +1274,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="Grid">
-                  <p class="tArrow"> Features</p>
+                  <p class="tArrow"> Main problems I am trying to solve</p>
                   <img class="se-arrow" src="../icon/arrow-se.svg" alt="se-arrow">
                 </div>
               </div>
@@ -1759,30 +1844,30 @@
           <div class="Grid-cell BGappointa">
             <div class="element">
               <div class="elementInner">
-  
+
                 <h3><strong>Enhance</strong></h3>
                 <h4>&#8226; Mockup and Prototype </h4>
                 <h4>&#8226; Tactile representation of ideas </h4>
-  
+
               </div>
             </div>
           </div>
           <div class="Grid-cell BGappointa">
             <div class="element">
               <div class="elementInner">
-  
+
                 <h3><strong>Test</strong></h3>
                 <h4>&#8226; Key flow charts </h4>
                 <h4>&#8226; Tactile representation of ideas</h4>
-  
+
               </div>
             </div>
           </div>
-  
+
           <div class="Grid-cell BGappointa">
             <div class="element">
               <div class="elementInner">
-  
+
                 <h3><strong>Document</strong></h3>
                 <h4>&#8226; Design system </h4>
                 <h4>&#8226; Outcome</h4>
