--- a/appointa/index.html
+++ b/appointa/index.html
@@ -484,11 +484,11 @@
           </div>
         </div>
         <!-- Arrow -->
-        <div class="Grid Grid--full u-textCenter wrapper">
+        <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
             <div class="element">
-              <h3 class="colorAPPOINTA">What&#63; &nbsp; When&#63; &nbsp; Why&#63; &nbsp; How&#63;
-                &nbsp; </h3>
+              <p class="specialText colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63; &nbsp; How&#63;
+                &nbsp; </p>
             </div>
           </div>
         </div>
@@ -1266,6 +1266,84 @@
         </div>
 
         <!-- user flow -->
+      </section>
+      <section id="useCases">
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Grid">
+                  <p class="tArrow"> Use cases</p>
+                  <img class="se-arrow" src="../../icon/arrow-se.svg" alt="se-arrow">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHXS"></div>
+        <!-- uses cases -->
+        <div class="wrapper">
+          <div class="Grid Grid--full ">
+            <div class="element ">
+              <div class="Grid-cell">
+                <div class="Grid Grid--gutters Grid--cols-3">
+
+                  <div class="Grid-cell">
+                    <div class="element">
+                      <div class="elementInner cardAPPOINTA heightM">
+                        <img class="iconM" src="ppl_recruiter.png"
+                          alt="Hiring managers, HR, Recruiters">
+
+                        <div class="blankHXS"></div>
+                        <h5> <strong> Recruiters &#47; Hiring managers </strong> </h5>
+                        <ul>
+                          <li> Invite team members to share availability</li>
+                          <li> Invite candidate to schedule interview</li>
+                          <li> Set team member interview skills</li>
+
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="Grid-cell">
+                    <div class="element">
+                      <div class="elementInner cardAPPOINTA heightM">
+                        <img class="iconM" src="ppl_teammember.png" alt="Team members">
+
+                        <div class="blankHXS"></div>
+                        <h5> <strong> Team members</strong> </h5>
+                        <ul>
+                          <li> Share availability by connecting calendar </li>
+                          <li> Connect to video conference account</li>
+                          <li> Pass interview to another team member</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="Grid-cell">
+                    <div class="element">
+                      <div class="elementInner cardAPPOINTA heightM">
+                        <img class="iconM" src="ppl_candidate.png" alt="Team members">
+                        <div class="blankHXS"></div>
+                        <h5> <strong> Candidates</strong> </h5>
+                        <ul>
+                          <li> Schedule an interview via link </li>
+                          <li> Provide information</li>
+                          <li> Reschedule and cancel interview</li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <img class="modal-target" src="usersRelationship.svg" alt="Pain points">
+
+        </div>
+        <!-- uses cases -->
       </section>
       <section id="features">
         <!-- Arrow -->
