--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1023,8 +1023,9 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
+                <p class="colorAPPOINTALt specialText">How Might We &#8230;</p>
+
                 <div class="element colorAPPOINTABg leftVerLine APPOINTA">
-                  <h3 class="colorAPPOINTA">How Might We &#8230;</h3>
 
                   <h4 class="">
                     <p>&#8230;allow the recruiter to <strong class="textDecor APPOINTA">see all of
