--- a/about/index.html
+++ b/about/index.html
@@ -147,8 +147,8 @@
 
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive "><a href="/"
-              class=" nav-link box font300-1080 ">PROJECT</a></li>
+          <li class="nav-item inactive "><a href="/" class=" nav-link box font300-1080 ">PROJECT</a>
+          </li>
           <li class="nav-item inactive"><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
           </li>
@@ -240,9 +240,13 @@
             <li class="progress__item ">
               <h3>Art</h3>
               <ul>
-                <li> Learning and practicing drawing and painting since primary school</li>
-                <li> It provides me a foundation to understand the color and composition of the
-                  design </li>
+                <li> developed the nature of artistic experience, allows me to express our emotions and feelings in a creative way.</li>
+                <li>It also inspired me to communicate messages or ideas, and to create a visual
+                  representation of something that we find difficult to put into words.</li>
+                <li>
+                  It helps me to develop a better understanding of the design process and to see
+                  things from a different perspective.</li>
+                <li>It provides me with a foundation form to create beautiful and unique designs by using color, composition, etc.</li>
               </ul>
             </li>
             <div class="blankHXS"></div>
@@ -250,11 +254,8 @@
             <li class="progress__item">
               <h3>Design</h3>
               <ul>
-                <li> I believe design can help people solve problems in an artistic way, so I chose
-                  art and design major
-                </li>
-                <li>I was interested in geometry operation/manipulation and how to provide a
-                  function with geometrics during studying art and design </li>
+                <li>having a strong creative vision</li>
+<li>creativity, innovation, attention to detail, and the ability to think outside the box.</li>
               </ul>
             </li>
             <div class="blankHXS"></div>
@@ -263,32 +264,26 @@
               <h3>Architecture</h3>
               <ul>
 
-                <li> 3 years architecture school, focused on how to
-                  integrate form and function together</li>
-                <li>The proudest part of architecture design is turning the design
-                  concept into the physical environment </li>
-                <li>As an architectural designer, I realized technical skills are important. every
-                  single step is part of the final result. </li>
+                <li>design buildings that are both functional and aesthetically pleasing</li>
+                <li>take into account the needs of the people who will be using the building </li>
+                <li> the specific components and how they interact, and the overall aesthetic. </li>
+                <li>being able to effectively communicate with clients and team members</li>
+                <li>being organized and efficient </li>
               </ul>
             </li>
             <div class="blankHXS"></div>
 
             <li class="progress__item progress__item--active">
               <strong>
-                <h3>Product design </h3>
+                <h3>User experience design </h3>
 
                 <ul>
-                  <li>I am interested in product design because I enjoy the challenge of
-                    transforming the physical world into digital flows</li>
-                  <li>Product design is scalable, solves problems for more people
-                  </li>
-                  <li>I believe in simplicity, using fewer elements to solve more problems
-                    always better than use more elements</li>
-                  <li>Understand the product and business is the key in order to solve the problem
-                    for
-                    users</li>
-                  <li>Understand design system in both Figma and HTML/CSS</li>
-                  <li>And more ... fairly new, still learning</li>
+                  <li>understanding the user, understand what they want and how they want to use the product</li>
+                  <li>design a product that is easy to use and meets their needs  </li>
+                  <li>user-friendly and aesthetically pleasing</li>
+                  <li>understanding of human psychology and how people interact with technology</li>
+ 
+                  <li>having a good understanding of the latest trends and technologies </li>
                 </ul>
               </strong>
             </li>
