--- a/about/index.html
+++ b/about/index.html
@@ -200,7 +200,7 @@
     </div>
     <div class="t-intro zTop" data-aos="fade-up">
       <p>
-        a <a href="/project/" class="textUnderline">UI&#47;UX</a> designer with an <a
+        a UI&#47;UX designer with an <a
           href="/architecture/" class="textUnderline">architectural design </a>background.
         Passionate
         about translating complex business requirements into compelling user experiences.
@@ -240,13 +240,15 @@
             <li class="progress__item ">
               <h3>Art</h3>
               <ul>
-                <li> developed the nature of artistic experience, allows me to express our emotions and feelings in a creative way.</li>
+                <li> developed the nature of artistic experience, allows me to express our emotions
+                  and feelings in a creative way.</li>
                 <li>It also inspired me to communicate messages or ideas, and to create a visual
                   representation of something that we find difficult to put into words.</li>
                 <li>
                   It helps me to develop a better understanding of the design process and to see
                   things from a different perspective.</li>
-                <li>It provides me with a foundation form to create beautiful and unique designs by using color, composition, etc.</li>
+                <li>It provides me with a foundation form to create beautiful and unique designs by
+                  using color, composition, etc.</li>
               </ul>
             </li>
             <div class="blankHXS"></div>
@@ -255,7 +257,8 @@
               <h3>Design</h3>
               <ul>
                 <li>having a strong creative vision</li>
-<li>creativity, innovation, attention to detail, and the ability to think outside the box.</li>
+                <li>creativity, innovation, attention to detail, and the ability to think outside
+                  the box.</li>
               </ul>
             </li>
             <div class="blankHXS"></div>
@@ -278,11 +281,12 @@
                 <h3>User experience design </h3>
 
                 <ul>
-                  <li>understanding the user, understand what they want and how they want to use the product</li>
-                  <li>design a product that is easy to use and meets their needs  </li>
+                  <li>understanding the user, understand what they want and how they want to use the
+                    product</li>
+                  <li>design a product that is easy to use and meets their needs </li>
                   <li>user-friendly and aesthetically pleasing</li>
                   <li>understanding of human psychology and how people interact with technology</li>
- 
+
                   <li>having a good understanding of the latest trends and technologies </li>
                 </ul>
               </strong>
