--- a/appointa/index.html
+++ b/appointa/index.html
@@ -486,10 +486,12 @@
         <!-- Arrow -->
         <div class="Grid Grid--full wrapper">
           <div class="Grid-cell">
-            <div class="element">
-              <p class="specialText colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63; &nbsp; How&#63;
+            <div class="element">            <div class="element">
+
+              <p class="specialText colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63;
+                &nbsp; How&#63;
                 &nbsp; </p>
-            </div>
+            </div></div>
           </div>
         </div>
 
@@ -597,39 +599,28 @@
         </div>
         <!-- Arrow -->
 
+
         <div class="wrapper">
 
 
           <div class="Grid Grid--full">
-            <div class="Grid-cell ">
-              <div class="element ">
-                <div class="element cardAPPOINTA">
-
-                  <div class="element BGappointaQuote">
-                    <div class="element">
-                      <h4 class="">&#8220; <strong class="textDecor APPOINTA">Finding a time that
-                          works
-                          for both</strong> the potential candidate and the recruiter/hiring
-                        manager is a challenge sometimes. This can be difficult to
-                        coordinate, especially if the potential candidate is located in a
-                        different time zone.&#8221;
-                      </h4>
-                    </div>
-                  </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="element">
+                  <p class="specialTextS colorAPPOINTALt">Having to coordinate with multiple people
+                    in order to find a time that works for everyone</p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
                 <div class="element cardAPPOINTA">
                   <div class="element BGappointaQuote">
-                    <h4>&#8220;
-                      <strong class="textDecor APPOINTA">Finding a time that works
-                        for both</strong> the potential candidate and the recruiter/hiring
+                    <h4>&#8220;Finding a time that works
+                      for both the potential candidate and the recruiter/hiring
                       manager is a challenge sometimes. This can be difficult to
                       coordinate, especially if the potential candidate is located in a
                       different time zone.&#8221;
@@ -645,9 +636,8 @@
               <div class="element ">
                 <div class="element cardAPPOINTA">
                   <div class="element BGappointaQuote">
-                    <h4 class=""> &#8220;I need to schedule <strong class="textDecor APPOINTA">as
-                        many
-                        interviews as possible</strong> in the allotted time. The
+                    <h4 class=""> &#8220;I need to schedule as many interviews as possible in the
+                      allotted time. The
                       goal is to schedule the interviews in such a way that no interviewer is
                       overworked and all of the interviews are conducted in a timely
                       manner.&#8221;
@@ -659,63 +649,30 @@
           </div>
 
           <div class="blankHXS"></div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element ">
-                <div class="element cardAPPOINTA">
-                  <div class="element BGappointaQuote">
-                    <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
-                      This
-                      means that the <strong class="textDecor APPOINTA">candidate should have
-                        all of the
-                        necessary documents and materials
-                        ready</strong>. The recruiter should also give the candidate a list of
-                      questions to
-                      prepare for in advance.&#8221;
-                    </h4>
-                  </div>
-                </div>
+
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextS colorAPPOINTALt">Trying to schedule around people's busy
+                  schedules</p>
               </div>
             </div>
           </div>
-
-
-          <div class="blankHXS"></div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element ">
-                <div class="element cardAPPOINTA">
-                  <div class="element BGappointaQuote">
-                    <h4>&#8220;If the <strong class="textDecor APPOINTA">candidates are not
-                        responsive</strong> or if the <strong class="textDecor APPOINTA">hiring
-                        manager's schedule is
-                        full</strong>, I have to spend more time and effort working on the
-                      interview
-                      schedule.&#8221;
-                    </h4>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="blankHXS"></div>
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
                 <div class="element cardAPPOINTA">
                   <div class="element BGappointaQuote">
-                    <h4>&#8220;I coordinate with hiring managers and other employees to <strong
-                      class="textDecor APPOINTA">ensure that the interview process runs smoothly</strong>. I also follow up with candidates after an interview to <strong
-                      class="textDecor APPOINTA">provide feedback</strong>.&#8221;
+                    <h4>&#8220;If the candidates are not responsive or if the hiring manager's
+                      schedule is full, I have to spend more time and effort working on the
+                      interview schedule.&#8221;
                     </h4>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -723,9 +680,9 @@
                 <div class="element cardAPPOINTA">
                   <div class="element BGappointaQuote">
                     <h4>&#8220;I feel that it is best to schedule interviews in advance so that
-                      both parties have time to prepare. This also allows the us to <strong
-                        class="textDecor APPOINTA">gauge the interest of the
-                        candidate</strong> and ensure that they are still interested in the
+                      both parties have time to prepare. This also allows the us to gauge the
+                      interest of the
+                      candidate and ensure that they are still interested in the
                       position.&#8221;</h4>
                   </div>
                 </div>
@@ -734,6 +691,68 @@
           </div>
           <div class="blankHXS"></div>
 
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextS colorAPPOINTALt">Keeping track of all the different
+                  scheduling
+                  requests</p>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element ">
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;Sometimes, I feel pressure to ensure that the interviews are conducted in a timely and efficient manner, in order to avoid any delays in the hiring process.&#8221;</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element ">
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;Ideally, the potential candidate is prepared for the interview.
+                      This means that the candidate should have
+                        all of the necessary documents and materials ready. The recruiter
+                      should also give the candidate a list of questions to prepare for in
+                      advance.&#8221;
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="element">
+                <p class="specialTextS colorAPPOINTALt">Making sure everyone is aware of the
+                  schedule
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element ">
+                <div class="element cardAPPOINTA">
+                  <div class="element BGappointaQuote">
+                    <h4>&#8220;I coordinate with hiring managers and other employees to ensure that
+                      the interview process runs
+                      smoothly. I also follow up with candidates after an interview to provide
+                      feedback.&#8221;
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element ">
@@ -741,10 +760,8 @@
                   <div class="element BGappointaQuote">
                     <h4>&#8220;I use the scheduling tools like Google Calendar or Calendly to
                       help me to automate part of the scheduling process. Google Calendar is a great
-                      tool for <strong
-                      class="textDecor APPOINTA">keeping track of events and setting reminders</strong>. Calendly is a great
-                      tool for <strong
-                      class="textDecor APPOINTA">setting up appointments</strong> and managing your schedule.&#8221;</h4>
+                      tool for keeping track of events and setting reminders. Calendly is a great
+                      tool for setting up appointments and managing your schedule.&#8221;</h4>
                   </div>
                 </div>
               </div>
@@ -752,28 +769,8 @@
           </div>
 
           <div class="blankHXS"></div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element ">
-                <div class="element cardAPPOINTA">
-                  <div class="element BGappointaQuote">
-                    <h4>&#8220;I may feel pressure to <strong class="textDecor APPOINTA">ensure that
-                        the interviews are conducted in a timely and efficient manner</strong>, in
-                      order to avoid any delays in the
-                      hiring process.&#8221;</h4>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-
-
-
         </div>
 
-        <div class="blankHS"></div>
       </section>
       <!-- Arrow -->
       <section id="empathyMap">
@@ -1915,7 +1912,7 @@
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
           <div class="Grid-cell">
             <h1 class="Grid Grid--center"> <span>Deliver</span><img class="moveUpDown widthLogo"
-                src="../icon/icon_Redesign.svg" alt="Redesign">
+                src="../icon/icon_clipboard-tick.svg" alt="Redesign">
             </h1>
           </div>
         </div>
