--- a/appointa/index.html
+++ b/appointa/index.html
@@ -400,7 +400,7 @@
 
         <li><a href="#ideation">Develop</a>
           <ul>
-            <li class=""><a href="#useCases">3 Persona Types</a></li>
+            <li class=""><a href="#useTypes">3 Persona Types</a></li>
 
             <li class=""><a href="#informationArchitecture">information architecture</a></li>
 
@@ -489,10 +489,10 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-
                 <p class="specialText colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63;
-                  &nbsp; How&#63;
-                  &nbsp; </p>
+                  &nbsp; How&#63; &nbsp; </p>
+                <p class="specialTextS colorAPPOINTAYellow u-textCenter">"What are the types of situations that are most likely to spend longer time scheduling an interview"</p>
+
               </div>
             </div>
           </div>
@@ -1105,10 +1105,10 @@
                     <h4> <strong> Collaboration</strong> </h4>
 
                     <ul>
-                      <li> Invite team members</li> 
+                      <li> Invite team members</li>
                       <li>Sync and share availability</li>
                       <li>Working hours & time zone</li>
-                    </ul>    
+                    </ul>
                   </div>
                 </div>
               </div>
@@ -1286,7 +1286,7 @@
         </div>
       </div>
 
-      <section id="useCases">
+      <section id="useTypes">
         <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
